I developed a lot new things. Thats the first version of website. I placed logo and removed buttoms for log in, because its not necessary on my type of website

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Education &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
+	<title>Rak jajnika &mdash; poradnik </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -17,8 +17,6 @@
 		
 	Website: 		http://freehtml5.co/
 	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
 
 	//////////////////////////////////////////////////////
 	 -->
@@ -54,8 +52,8 @@
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
 
-	<!-- Pricing -->
-	<link rel="stylesheet" href="css/pricing.css">
+	<!-- wsparcie -->
+	<link rel="stylesheet" href="css/wsparcie.css">
 
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
@@ -78,8 +76,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
-						<p class="site">www.yourdomainname.com</p>
-						<p class="num">Call: +01 123 456 7890</p>
+						
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-facebook2"></i></a></li>
 							<li><a href="#"><i class="icon-twitter2"></i></a></li>
@@ -94,17 +91,17 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html"><i class="icon-study"></i>Educ<span>.</span></a></div>
+						<a href="index.html"><img src="OvarianGuide.png" alt="Ovarian Guide" width="70" height="70"></a>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="courses.html">Courses</a></li>
-							<li><a href="teacher.html">Teacher</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="pricing.html">Pricing</a></li>
+							<li><a href="wiedza.html">O raku jajnika</a></li>
+							<li><a href="diagnoza.html">Diagnoza</a></li>
+							<li><a href="leczenie.html">Leczenie</a></li>
+							<li><a href="wsparcie.html">Wsparcie pacjentek</a></li>
 							<li class="has-dropdown">
-								<a href="blog.html">Blog</a>
+								<a href="O mnie.html">O mnie</a>
 								<ul class="dropdown">
 									<li><a href="#">Web Design</a></li>
 									<li><a href="#">eCommerce</a></li>
@@ -112,9 +109,8 @@
 									<li><a href="#">API</a></li>
 								</ul>
 							</li>
-							<li><a href="contact.html">Contact</a></li>
-							<li class="btn-cta"><a href="#"><span>Login</span></a></li>
-							<li class="btn-cta"><a href="#"><span>Create a Course</span></a></li>
+							<li><a href="kontakt.html">Kontakt</a></li>
+							
 						</ul>
 					</div>
 				</div>
@@ -132,9 +128,9 @@
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>The Roots of Education are Bitter, But the Fruit is Sweet</h1>
-									<h2>Brought to you by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-									<p><a class="btn btn-primary btn-lg" href="#">Start Learning Now!</a></p>
+			   					<h1>Tykająca bomba</h1>
+									<h2>Czas na rozmowę o ważnej kwestii zdrowia kobiet - raku jajnika. Ten cichy zabójca często rozwija się bezobjawowo, dlatego wiedza na jego temat jest kluczowa. Dowiedz się, jak rozpoznać sygnały alarmowe i dlaczego wczesne wykrycie może być kluczowe dla skutecznego leczenia.</a></h2>
+									<p><a class="btn btn-primary btn-lg" href="#">Czytaj więcej</a></p>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -146,9 +142,9 @@
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>The Great Aim of Education is not Knowledge, But Action</h1>
-									<h2>Brought to you by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Start Learning Now!</a></p>
+			   					<h1>Nie bądź obojętna</h1>
+									<h2>Rak jajnika to jedna z najbardziej podstępnych form nowotworu u kobiet. Co roku tysiące kobiet na całym świecie dowiaduje się o diagnozie. Na tym slajdzie znajdziesz kluczowe fakty i statystyki, abyśmy mogli razem podjąć walkę z tą chorobą.</a></h2>
+									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Czytaj więcej</a></p>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -160,9 +156,9 @@
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1>We Help You to Learn New Things</h1>
-									<h2>Brought to you by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
-									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Start Learning Now!</a></p>
+			   					<h1> Łączymy siły</h1>
+									<h2>Rak jajnika wymaga uwagi i zaangażowania społeczności. Razem możemy tworzyć świadomość, wspierać się nawzajem i pracować nad poprawą diagnozy oraz leczenia tej poważnej choroby.</a></h2>
+									<p><a class="btn btn-primary btn-lg btn-learn" href="#">Czytaj więcej</a></p>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -184,7 +180,7 @@
 				<div class="col-md-3 col-sm-6 text-center animate-box">
 					<div class="services">
 						<span class="icon">
-							<i class="icon-shop"></i>
+							<i class="icon-home"></i>
 						</span>
 						<div class="desc">
 							<h3><a href="#">Business</a></h3>
@@ -195,7 +191,7 @@
 				<div class="col-md-3 col-sm-6 text-center animate-box">
 					<div class="services">
 						<span class="icon">
-							<i class="icon-heart4"></i>
+							<i class="icon-folder-add"></i>
 						</span>
 						<div class="desc">
 							<h3><a href="#">Health &amp; Psychology</a></h3>
@@ -206,7 +202,7 @@
 				<div class="col-md-3 col-sm-6 text-center animate-box">
 					<div class="services">
 						<span class="icon">
-							<i class="icon-banknote"></i>
+							<i class="icon-clipboard"></i>
 						</span>
 						<div class="desc">
 							<h3><a href="#">Accounting</a></h3>
@@ -408,11 +404,11 @@
 		</div>
 	</div>
 
-	<div id="fh5co-blog">
+	<div id="fh5co-O mnie">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Blog &amp; Events</h2>
+					<h2>O mnie &amp; Events</h2>
 					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
 			</div>
@@ -444,9 +440,9 @@
 			</div>
 			<div class="row">
 				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-img-holder" style="background-image: url(images/project-1.jpg);"></a>
-						<div class="blog-text">
+					<div class="fh5co-O mnie animate-box">
+						<a href="#" class="O mnie-img-holder" style="background-image: url(images/project-1.jpg);"></a>
+						<div class="O mnie-text">
 							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
 							<span class="posted_on">March. 15th</span>
 							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
@@ -455,9 +451,9 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-img-holder" style="background-image: url(images/project-2.jpg);"></a>
-						<div class="blog-text">
+					<div class="fh5co-O mnie animate-box">
+						<a href="#" class="O mnie-img-holder" style="background-image: url(images/project-2.jpg);"></a>
+						<div class="O mnie-text">
 							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
 							<span class="posted_on">March. 15th</span>
 							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
@@ -466,9 +462,9 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-img-holder" style="background-image: url(images/project-3.jpg);"></a>
-						<div class="blog-text">
+					<div class="fh5co-O mnie animate-box">
+						<a href="#" class="O mnie-img-holder" style="background-image: url(images/project-3.jpg);"></a>
+						<div class="O mnie-text">
 							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
 							<span class="posted_on">March. 15th</span>
 							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
@@ -480,100 +476,100 @@
 		</div>
 	</div>
 
-	<div id="fh5co-pricing" class="fh5co-bg-section">
+	<div id="fh5co-wsparcie" class="fh5co-bg-section">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Plan &amp; Pricing</h2>
+					<h2>Plan &amp; wsparcie</h2>
 					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="pricing pricing--rabten">
+				<div class="wsparcie wsparcie--rabten">
 					<div class="col-md-4 animate-box">
-						<div class="pricing__item">
+						<div class="wsparcie__item">
 							<div class="wrap-price">
 								 <!-- <div class="icon icon-user2"></div> -->
-	                     <h3 class="pricing__title">Trial</h3>
-	                     <!-- <p class="pricing__sentence">Single user license</p> -->
+	                     <h3 class="wsparcie__title">Trial</h3>
+	                     <!-- <p class="wsparcie__sentence">Single user license</p> -->
 							</div>
-                     <div class="pricing__price">
-                        <span class="pricing__anim pricing__anim--1">
-								<span class="pricing__currency">$</span>0
+                     <div class="wsparcie__price">
+                        <span class="wsparcie__anim wsparcie__anim--1">
+								<span class="wsparcie__currency">$</span>0
                         </span>
-                        <span class="pricing__anim pricing__anim--2">
-								<span class="pricing__period">per year</span>
+                        <span class="wsparcie__anim wsparcie__anim--2">
+								<span class="wsparcie__period">per year</span>
                         </span>
                      </div>
                      <div class="wrap-price">
-                     	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">One Day Trial</li>
-	                        <li class="pricing__feature">Limited Courses</li>
-	                        <li class="pricing__feature">Free 3 Lessons</li>
-	                        <li class="pricing__feature">No Supporter</li>
-	                        <li class="pricing__feature">No Tutorial</li>
-	                        <li class="pricing__feature">No Ebook</li>
-	                         <li class="pricing__feature">Limited Registered User</li>
+                     	<ul class="wsparcie__feature-list">
+	                        <li class="wsparcie__feature">One Day Trial</li>
+	                        <li class="wsparcie__feature">Limited wiedza</li>
+	                        <li class="wsparcie__feature">Free 3 Lessons</li>
+	                        <li class="wsparcie__feature">No Supporter</li>
+	                        <li class="wsparcie__feature">No Tutorial</li>
+	                        <li class="wsparcie__feature">No Ebook</li>
+	                         <li class="wsparcie__feature">Limited Registered User</li>
 	                     </ul>
-	                     <button class="pricing__action">Choose plan</button>
+	                     <button class="wsparcie__action">Choose plan</button>
                      </div>
                   </div>
 					</div>
 					<div class="col-md-4 animate-box">
-						<div class="pricing__item">
+						<div class="wsparcie__item">
 							<div class="wrap-price">
 								<!-- <div class="icon icon-store"></div> -->
-	                     <h3 class="pricing__title">Silver</h3>
-	                     <!-- <p class="pricing__sentence">Up to 5 users</p> -->
+	                     <h3 class="wsparcie__title">Silver</h3>
+	                     <!-- <p class="wsparcie__sentence">Up to 5 users</p> -->
 							</div>
-                     <div class="pricing__price">
-                        <span class="pricing__anim pricing__anim--1">
-								<span class="pricing__currency">$</span>79
+                     <div class="wsparcie__price">
+                        <span class="wsparcie__anim wsparcie__anim--1">
+								<span class="wsparcie__currency">$</span>79
                         </span>
-                        <span class="pricing__anim pricing__anim--2">
-								<span class="pricing__period">per year</span>
+                        <span class="wsparcie__anim wsparcie__anim--2">
+								<span class="wsparcie__period">per year</span>
                         </span>
                      </div>
                      <div class="wrap-price">
-                     	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">One Year Standard Access</li>
-	                        <li class="pricing__feature">Limited Courses</li>
-	                        <li class="pricing__feature">300+ Lessons</li>
-	                        <li class="pricing__feature">Random Supporter</li>
-	                        <li class="pricing__feature">View Only Ebook</li>
-	                        <li class="pricing__feature">Standard Tutorials</li>
-	                         <li class="pricing__feature">Unlimited Registered User</li>
+                     	<ul class="wsparcie__feature-list">
+	                        <li class="wsparcie__feature">One Year Standard Access</li>
+	                        <li class="wsparcie__feature">Limited wiedza</li>
+	                        <li class="wsparcie__feature">300+ Lessons</li>
+	                        <li class="wsparcie__feature">Random Supporter</li>
+	                        <li class="wsparcie__feature">View Only Ebook</li>
+	                        <li class="wsparcie__feature">Standard Tutorials</li>
+	                         <li class="wsparcie__feature">Unlimited Registered User</li>
 	                     </ul>
-	                     <button class="pricing__action">Choose plan</button>
+	                     <button class="wsparcie__action">Choose plan</button>
                      </div>
                  </div>
 					</div>
 					<div class="col-md-4 animate-box">
-                  <div class="pricing__item">
+                  <div class="wsparcie__item">
                   	<div class="wrap-price">
                   		<!-- <div class="icon icon-home2"></div> -->
-	                     <h3 class="pricing__title">Gold</h3>
-	                     <!-- <p class="pricing__sentence">Unlimited users</p> -->
+	                     <h3 class="wsparcie__title">Gold</h3>
+	                     <!-- <p class="wsparcie__sentence">Unlimited users</p> -->
 							</div>
-                     <div class="pricing__price">
-                        <span class="pricing__anim pricing__anim--1">
-								<span class="pricing__currency">$</span>499
+                     <div class="wsparcie__price">
+                        <span class="wsparcie__anim wsparcie__anim--1">
+								<span class="wsparcie__currency">$</span>499
                         </span>
-                        <span class="pricing__anim pricing__anim--2">
-								<span class="pricing__period">per year</span>
+                        <span class="wsparcie__anim wsparcie__anim--2">
+								<span class="wsparcie__period">per year</span>
                         </span>
                      </div>
                      <div class="wrap-price">
-                     	<ul class="pricing__feature-list">
-	                        <li class="pricing__feature">Life Time Access</li>
-	                        <li class="pricing__feature">Unlimited All Courses</li>
-	                        <li class="pricing__feature">7000+ Lessons &amp; Growing</li>
-	                        <li class="pricing__feature">Free Supporter</li>
-	                        <li class="pricing__feature">Free Ebook Downloads</li>
-	                        <li class="pricing__feature">Premium Tutorials</li>
-	                         <li class="pricing__feature">Unlimited Registered User</li>
+                     	<ul class="wsparcie__feature-list">
+	                        <li class="wsparcie__feature">Life Time Access</li>
+	                        <li class="wsparcie__feature">Unlimited All wiedza</li>
+	                        <li class="wsparcie__feature">7000+ Lessons &amp; Growing</li>
+	                        <li class="wsparcie__feature">Free Supporter</li>
+	                        <li class="wsparcie__feature">Free Ebook Downloads</li>
+	                        <li class="wsparcie__feature">Premium Tutorials</li>
+	                         <li class="wsparcie__feature">Unlimited Registered User</li>
 	                     </ul>
-	                     <button class="pricing__action">Choose plan</button>
+	                     <button class="wsparcie__action">Choose plan</button>
                      </div>
                   </div>
                </div>
@@ -587,7 +583,7 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 animate-box">
 				<div class="date-counter text-center">
-					<h2>Get 400 of Online Courses for Free</h2>
+					<h2>Get 400 of Online wiedza for Free</h2>
 					<h3>By Mike Smith</h3>
 					<div class="simply-countdown simply-countdown-one"></div>
 					<p><strong>Limited Offer, Hurry Up!</strong></p>
@@ -622,15 +618,15 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-3 fh5co-widget">
-					<h3>About Education</h3>
+					<h3>leczenie Education</h3>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
 					<h3>Learning</h3>
 					<ul class="fh5co-footer-links">
 						<li><a href="#">Course</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="#">O mnie</a></li>
+						<li><a href="#">kontakt</a></li>
 						<li><a href="#">Terms</a></li>
 						<li><a href="#">Meetups</a></li>
 					</ul>
@@ -639,7 +635,7 @@
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
 					<h3>Learn &amp; Grow</h3>
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Blog</a></li>
+						<li><a href="#">O mnie</a></li>
 						<li><a href="#">Privacy</a></li>
 						<li><a href="#">Testimonials</a></li>
 						<li><a href="#">Handbook</a></li>
