--- a/wiedza.html
+++ b/wiedza.html
@@ -54,8 +54,8 @@
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
 
-	<!-- Pricing -->
-	<link rel="stylesheet" href="css/pricing.css">
+	<!-- wsparcie -->
+	<link rel="stylesheet" href="css/wsparcie.css">
 
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
@@ -78,7 +78,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
-						<p class="site">www.yourdomainname.com</p>
+						
 						<p class="num">Call: +01 123 456 7890</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -94,17 +94,17 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html"><i class="icon-study"></i>Educ<span>.</span></a></div>
+						<a href="index.html"><img src="OvarianGuide.png" alt="Ovarian Guide" width="70" height="70"></a>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="courses.html">Courses</a></li>
-							<li><a href="teacher.html">Teacher</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="pricing.html">Pricing</a></li>
+							<li class="active"><a href="wiedza.html">O raku jajnika</a></li>
+							<li><a href="diagnoza.html">Diagnoza</a></li>
+							<li><a href="leczenie.html">Leczenie</a></li>
+							<li><a href="wsparcie.html">Wsparcie pacjentek</a></li>
 							<li class="has-dropdown">
-								<a href="blog.html">Blog</a>
+								<a href="O mnie.html">O mnie</a>
 								<ul class="dropdown">
 									<li><a href="#">Web Design</a></li>
 									<li><a href="#">eCommerce</a></li>
@@ -112,9 +112,8 @@
 									<li><a href="#">API</a></li>
 								</ul>
 							</li>
-							<li><a href="contact.html">Contact</a></li>
-							<li class="btn-cta"><a href="#"><span>Login</span></a></li>
-							<li class="btn-cta"><a href="#"><span>Create a Course</span></a></li>
+							<li><a href="kontakt.html">Kontakt</a></li>
+							
 						</ul>
 					</div>
 				</div>
@@ -132,8 +131,8 @@
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1 class="heading-section">Our Course</h1>
-									<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+			   					<h1 class="heading-section">Poznaj niewidocznego wroga</h1>
+									<h2>Anatomia jajnika, czynniki ryzyka, objawy oraz rodzaje raka- cała wiedza w pigułce.	</a></h2>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -227,7 +226,7 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 animate-box">
 				<div class="date-counter text-center">
-					<h2>Get 400 of Online Courses for Free</h2>
+					<h2>Get 400 of Online wiedza for Free</h2>
 					<h3>By Mike Smith</h3>
 					<div class="simply-countdown simply-countdown-one"></div>
 					<p><strong>Limited Offer, Hurry Up!</strong></p>
@@ -242,15 +241,15 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-3 fh5co-widget">
-					<h3>About Education</h3>
+					<h3>leczenie Education</h3>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
 					<h3>Learning</h3>
 					<ul class="fh5co-footer-links">
 						<li><a href="#">Course</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="#">O mnie</a></li>
+						<li><a href="#">kontakt</a></li>
 						<li><a href="#">Terms</a></li>
 						<li><a href="#">Meetups</a></li>
 					</ul>
@@ -259,7 +258,7 @@
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
 					<h3>Learn &amp; Grow</h3>
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Blog</a></li>
+						<li><a href="#">O mnie</a></li>
 						<li><a href="#">Privacy</a></li>
 						<li><a href="#">Testimonials</a></li>
 						<li><a href="#">Handbook</a></li>
