--- a/wsparcie.html
+++ b/wsparcie.html
@@ -54,8 +54,8 @@
 	<!-- Flexslider  -->
 	<link rel="stylesheet" href="css/flexslider.css">
 
-	<!-- Pricing -->
-	<link rel="stylesheet" href="css/pricing.css">
+	<!-- wsparcie -->
+	<link rel="stylesheet" href="css/wsparcie.css">
 
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
@@ -78,7 +78,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
-						<p class="site">www.yourdomainname.com</p>
+						
 						<p class="num">Call: +01 123 456 7890</p>
 						<ul class="fh5co-social">
 							<li><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -94,17 +94,17 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-2">
-						<div id="fh5co-logo"><a href="index.html"><i class="icon-study"></i>Educ<span>.</span></a></div>
+						<a href="index.html"><img src="OvarianGuide.png" alt="Ovarian Guide" width="70" height="70"></a>
 					</div>
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="courses.html">Courses</a></li>
-							<li><a href="teacher.html">Teacher</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="pricing.html">Pricing</a></li>
-							<li class="has-dropdown active">
-								<a href="blog.html">Blog</a>
+							<li><a href="wiedza.html">O raku jajnika</a></li>
+							<li><a href="diagnoza.html">Diagnoza</a></li>
+							<li><a href="leczenie.html">Leczenie</a></li>
+							<li class="active"><a href="wsparcie.html">Wsparcie pacjentek</a></li>
+							<li class="has-dropdown">
+								<a href="O mnie.html">O mnie</a>
 								<ul class="dropdown">
 									<li><a href="#">Web Design</a></li>
 									<li><a href="#">eCommerce</a></li>
@@ -112,9 +112,8 @@
 									<li><a href="#">API</a></li>
 								</ul>
 							</li>
-							<li><a href="contact.html">Contact</a></li>
-							<li class="btn-cta"><a href="#"><span>Login</span></a></li>
-							<li class="btn-cta"><a href="#"><span>Create a Course</span></a></li>
+							<li><a href="kontakt.html">Kontakt</a></li>
+							
 						</ul>
 					</div>
 				</div>
@@ -132,7 +131,7 @@
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1 class="heading-section">Blog &amp; Events</h1>
+			   					<h1 class="heading-section">Plan &amp; wsparcie</h1>
 									<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
 			   				</div>
 			   			</div>
@@ -143,74 +142,104 @@
 	  	</div>
 	</aside>
 
-	<div id="fh5co-blog">
+	<div id="fh5co-wsparcie" class="fh5co-bg-section">
 		<div class="container">
 			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Blog &amp; Events</h2>
+				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+					<h2>Plan &amp; wsparcie</h2>
 					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
 				</div>
 			</div>
-			<div class="row row-padded-mb">
-				<div class="col-md-4 animate-box">
-					<div class="fh5co-event">
-						<div class="date text-center"><span>15<br>Mar.</span></div>
-						<h3><a href="#">USA, International Triathlon Event</a></h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="#">Read More</a></p>
-					</div>
-				</div>
-				<div class="col-md-4 animate-box">
-					<div class="fh5co-event">
-						<div class="date text-center"><span>15<br>Mar.</span></div>
-						<h3><a href="#">USA, International Triathlon Event</a></h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="#">Read More</a></p>
-					</div>
-				</div>
-				<div class="col-md-4 animate-box">
-					<div class="fh5co-event">
-						<div class="date text-center"><span>15<br>Mar.</span></div>
-						<h3><a href="#">New Device Develope by Microsoft</a></h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="#">Read More</a></p>
-					</div>
-				</div>
-			</div>
 			<div class="row">
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-img-holder" style="background-image: url(images/project-1.jpg);"></a>
-						<div class="blog-text">
-							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
-							<span class="posted_on">March. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						</div> 
+				<div class="wsparcie wsparcie--rabten">
+					<div class="col-md-4 animate-box">
+						<div class="wsparcie__item">
+							<div class="wrap-price">
+								 <!-- <div class="icon icon-user2"></div> -->
+	                     <h3 class="wsparcie__title">Trial</h3>
+	                     <!-- <p class="wsparcie__sentence">Single user license</p> -->
+							</div>
+                     <div class="wsparcie__price">
+                        <span class="wsparcie__anim wsparcie__anim--1">
+								<span class="wsparcie__currency">$</span>0
+                        </span>
+                        <span class="wsparcie__anim wsparcie__anim--2">
+								<span class="wsparcie__period">per year</span>
+                        </span>
+                     </div>
+                     <div class="wrap-price">
+                     	<ul class="wsparcie__feature-list">
+	                        <li class="wsparcie__feature">One Day Trial</li>
+	                        <li class="wsparcie__feature">Limited wiedza</li>
+	                        <li class="wsparcie__feature">Free 3 Lessons</li>
+	                        <li class="wsparcie__feature">No Supporter</li>
+	                        <li class="wsparcie__feature">No Tutorial</li>
+	                        <li class="wsparcie__feature">No Ebook</li>
+	                         <li class="wsparcie__feature">Limited Registered User</li>
+	                     </ul>
+	                     <button class="wsparcie__action">Choose plan</button>
+                     </div>
+                  </div>
 					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-img-holder" style="background-image: url(images/project-2.jpg);"></a>
-						<div class="blog-text">
-							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
-							<span class="posted_on">March. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						</div> 
+					<div class="col-md-4 animate-box">
+						<div class="wsparcie__item">
+							<div class="wrap-price">
+								<!-- <div class="icon icon-store"></div> -->
+	                     <h3 class="wsparcie__title">Silver</h3>
+	                     <!-- <p class="wsparcie__sentence">Up to 5 users</p> -->
+							</div>
+                     <div class="wsparcie__price">
+                        <span class="wsparcie__anim wsparcie__anim--1">
+								<span class="wsparcie__currency">$</span>79
+                        </span>
+                        <span class="wsparcie__anim wsparcie__anim--2">
+								<span class="wsparcie__period">per year</span>
+                        </span>
+                     </div>
+                     <div class="wrap-price">
+                     	<ul class="wsparcie__feature-list">
+	                        <li class="wsparcie__feature">One Year Standard Access</li>
+	                        <li class="wsparcie__feature">Limited wiedza</li>
+	                        <li class="wsparcie__feature">300+ Lessons</li>
+	                        <li class="wsparcie__feature">Random Supporter</li>
+	                        <li class="wsparcie__feature">View Only Ebook</li>
+	                        <li class="wsparcie__feature">Standard Tutorials</li>
+	                         <li class="wsparcie__feature">Unlimited Registered User</li>
+	                     </ul>
+	                     <button class="wsparcie__action">Choose plan</button>
+                     </div>
+                 </div>
 					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-blog animate-box">
-						<a href="#" class="blog-img-holder" style="background-image: url(images/project-3.jpg);"></a>
-						<div class="blog-text">
-							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
-							<span class="posted_on">March. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						</div> 
-					</div>
-				</div>
+					<div class="col-md-4 animate-box">
+                  <div class="wsparcie__item">
+                  	<div class="wrap-price">
+                  		<!-- <div class="icon icon-home2"></div> -->
+	                     <h3 class="wsparcie__title">Gold</h3>
+	                     <!-- <p class="wsparcie__sentence">Unlimited users</p> -->
+							</div>
+                     <div class="wsparcie__price">
+                        <span class="wsparcie__anim wsparcie__anim--1">
+								<span class="wsparcie__currency">$</span>499
+                        </span>
+                        <span class="wsparcie__anim wsparcie__anim--2">
+								<span class="wsparcie__period">per year</span>
+                        </span>
+                     </div>
+                     <div class="wrap-price">
+                     	<ul class="wsparcie__feature-list">
+	                        <li class="wsparcie__feature">Life Time Access</li>
+	                        <li class="wsparcie__feature">Unlimited All wiedza</li>
+	                        <li class="wsparcie__feature">7000+ Lessons &amp; Growing</li>
+	                        <li class="wsparcie__feature">Free Supporter</li>
+	                        <li class="wsparcie__feature">Free Ebook Downloads</li>
+	                        <li class="wsparcie__feature">Premium Tutorials</li>
+	                         <li class="wsparcie__feature">Unlimited Registered User</li>
+	                     </ul>
+	                     <button class="wsparcie__action">Choose plan</button>
+                     </div>
+                  </div>
+               </div>
+            </div>
 			</div>
 		</div>
 	</div>
@@ -220,7 +249,7 @@
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 animate-box">
 				<div class="date-counter text-center">
-					<h2>Get 400 of Online Courses for Free</h2>
+					<h2>Get 400 of Online wiedza for Free</h2>
 					<h3>By Mike Smith</h3>
 					<div class="simply-countdown simply-countdown-one"></div>
 					<p><strong>Limited Offer, Hurry Up!</strong></p>
@@ -235,15 +264,15 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-3 fh5co-widget">
-					<h3>About Education</h3>
+					<h3>leczenie Education</h3>
 					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
 					<h3>Learning</h3>
 					<ul class="fh5co-footer-links">
 						<li><a href="#">Course</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="#">O mnie</a></li>
+						<li><a href="#">kontakt</a></li>
 						<li><a href="#">Terms</a></li>
 						<li><a href="#">Meetups</a></li>
 					</ul>
@@ -252,7 +281,7 @@
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1 fh5co-widget">
 					<h3>Learn &amp; Grow</h3>
 					<ul class="fh5co-footer-links">
-						<li><a href="#">Blog</a></li>
+						<li><a href="#">O mnie</a></li>
 						<li><a href="#">Privacy</a></li>
 						<li><a href="#">Testimonials</a></li>
 						<li><a href="#">Handbook</a></li>
